--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Source+Sans+Pro" rel="stylesheet">
 
@@ -23,7 +24,10 @@
   <script src="./assets/vendors/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>Loading....</app-root>
+  <noscript>
+    Máy bạn chưa hỗ trợ javascript.
+  </noscript>
 </body>
 <script src="./assets/js/top.js"></script>
 </html>
