--- a/src/index.html
+++ b/src/index.html
@@ -30,4 +30,10 @@
   </noscript>
 </body>
 <script src="./assets/js/top.js"></script>
+<script>
+//  $(document).ready(function () {
+//    $('form').parent().css({"font-weight":"600"});
+//    console.log("ok");
+//  })
+</script>
 </html>
