--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,11 @@
   <link href="./assets/css/main.css" type="text/css" rel="stylesheet"/>
   <script src="./assets/vendors/jquery/jquery-3.2.1.min.js"></script>
   <script src="./assets/vendors/bootstrap/js/bootstrap.min.js"></script>
+
+
+  <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/17.2.3/css/dx.spa.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/17.2.3/css/dx.common.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/17.2.3/css/dx.dark.css" />
 </head>
 <body>
   <app-root>Loading....</app-root>
