chinh sua thu tuc luong, them thu tuc ky luat , khen thuong

--- a/src/index.html
+++ b/src/index.html
@@ -10,18 +10,19 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Source+Sans+Pro" rel="stylesheet">
 
-  <link href="./assets/vendors/bootstrap/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+  <link href="/assets/vendors/bootstrap/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 
-  <link href="./assets/vendors/font-awesome-4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet"/>
-  <link href="./assets/css/main.css" type="text/css" rel="stylesheet"/>
+  <link href="/assets/vendors/font-awesome-4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet"/>
+  <link href="/assets/css/main.css" type="text/css" rel="stylesheet"/>
 
-  <link href="./assets/css/core/helper_class_main.css" type="text/css" rel="stylesheet"/>
-  <link href="./assets/css/core/helper_class_i.css" type="text/css" rel="stylesheet"/>
-  <link href="./assets/css/core/helper_class2.css" type="text/css" rel="stylesheet"/>
-  <link href="./assets/css/core/color.css" type="text/css" rel="stylesheet"/>
-  <link href="./assets/css/main.css" type="text/css" rel="stylesheet"/>
-  <script src="./assets/vendors/jquery/jquery-3.2.1.min.js"></script>
-  <script src="./assets/vendors/bootstrap/js/bootstrap.min.js"></script>
+  <link href="/assets/css/core/helper_class_main.css" type="text/css" rel="stylesheet"/>
+  <link href="/assets/css/core/helper_class_i.css" type="text/css" rel="stylesheet"/>
+  <link href="/assets/css/core/helper_class2.css" type="text/css" rel="stylesheet"/>
+  <link href="/assets/css/core/color.css" type="text/css" rel="stylesheet"/>
+  <link href="/assets/css/main.css" type="text/css" rel="stylesheet"/>
+
+  <script src="/assets/vendors/jquery/jquery-3.2.1.min.js"></script>
+  <script src="/assets/vendors/bootstrap/js/bootstrap.min.js"></script>
 
 
   <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/17.2.3/css/dx.spa.css" />
