thay doi tim kiem theo ho ten ma phong ban

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,11 @@
   <link href="/assets/vendors/font-awesome-4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet"/>
   <link href="/assets/css/main.css" type="text/css" rel="stylesheet"/>
 
+  <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/17.2.3/css/dx.spa.css"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/17.2.3/css/dx.common.css"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/17.2.3/css/dx.dark.css"/>
+  <link rel="stylesheet" type="text/css" href="/assets/vendors/ng2-select/ng2-select.css"/>
+
   <link href="/assets/css/core/helper_class_main.css" type="text/css" rel="stylesheet"/>
   <link href="/assets/css/core/helper_class_i.css" type="text/css" rel="stylesheet"/>
   <link href="/assets/css/core/helper_class2.css" type="text/css" rel="stylesheet"/>
@@ -23,17 +28,12 @@
 
   <script src="/assets/vendors/jquery/jquery-3.2.1.min.js"></script>
   <script src="/assets/vendors/bootstrap/js/bootstrap.min.js"></script>
-
-
-  <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/17.2.3/css/dx.spa.css" />
-  <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/17.2.3/css/dx.common.css" />
-  <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/17.2.3/css/dx.dark.css" />
 </head>
 <body>
-  <app-root>Loading....</app-root>
-  <noscript>
-    Máy bạn chưa hỗ trợ javascript.
-  </noscript>
+<app-root>Loading....</app-root>
+<noscript>
+  Máy bạn chưa hỗ trợ javascript.
+</noscript>
 </body>
 <script src="./assets/js/top.js"></script>
 <script>
