tao form thay doi mat khau, quen mat khau, thay doi word, chinh sua form tim kiem, tao page duyet

--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,12 @@
 <app-root>Loading....</app-root>
 <noscript>
   Máy bạn chưa hỗ trợ javascript.
+  ng build --build-optimizer
+  tree shaking
+
 </noscript>
 </body>
-<script src="./assets/js/top.js"></script>
+<script src="/assets/js/top.js"></script>
 <script>
   $(document).ready(function () {
     $('[data-toggle="tooltip"]').tooltip();
