--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
 
   <script src="/assets/vendors/jquery/jquery-3.2.1.min.js"></script>
   <script src="/assets/vendors/bootstrap/js/bootstrap.min.js"></script>
+  <!--<script src="/assets/vendors/bootstrap/js/bootstrap.js"></script>-->
+  <script src="/assets/vendors/bootstrap/js/bootstrap-confirmation.min.js"></script>
 </head>
 <body>
 <app-root>Loading....</app-root>
