thong ke can bo sinh nhat theo quy va thong ke can bo sap nghi huu

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,18 @@
 <head>
   <meta charset="utf-8">
   <title>KhoaLuanHocVienNongNghiepVietNam</title>
-  <base href="/">
+  <base href="/khoaluan">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--<link rel="icon" type="image/x-icon" href="favicon.ico">-->
+  <link rel="icon" type="image/x-icon" href="./assets/images/logo/logo4.png">
 
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Source+Sans+Pro" rel="stylesheet">
+  <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">-->
+  <!--<link href="/assets/font/font-open-sam.css"  type="text/css" rel="stylesheet">-->
+  <!--<link href="/assets/font/font-roboto.css"  type="text/css" rel="stylesheet">-->
+
+  <!--<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">-->
+  <!--<link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Source+Sans+Pro" rel="stylesheet">-->
+  <!--<link href="https://fonts.googleapis.com/css?family=Roboto"  type="text/css" rel="stylesheet">-->
 
   <link href="/assets/vendors/bootstrap/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 
